force-app/main/default/objects/sfcma__Subscription__c/sfcma__Subscription__c.object-meta.xml
<CustomObject>
    <description>Contains information about the customer&apos;s history and usage of an offering. For example, when the subscription started.</description>
    <label>Checkout Subscription</label>
    <nameField>
        <displayFormat>SUB-{000000}</displayFormat>
        <label>Checkout Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>