force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>sfcma__ActivationDate__c</fullName>
    <label>Activation Date</label>
    <type>DateTime</type>
</CustomField>