force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__AmountDiscountedByCoupon__c.field-meta.xml
<CustomField>
    <fullName>sfcma__AmountDiscountedByCoupon__c</fullName>
    <description>The amount discounted by coupon if discount coupon of type dollar comes with subscription.</description>
    <label>Amount Discounted By Coupon</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>