force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__BillingCountry__c.field-meta.xml
<CustomField>
    <fullName>sfcma__BillingCountry__c</fullName>
    <label>Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>