force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__Charge__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Charge__c</fullName>
    <description>Charge per license</description>
    <label>Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>