force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__Coupon__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Coupon__c</fullName>
    <label>Coupon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>