force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__CouponDiscountType__c.field-meta.xml
<CustomField>
    <fullName>sfcma__CouponDiscountType__c</fullName>
    <description>The type of discount a coupon applies to the subscription.</description>
    <label>Coupon Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>dollars</fullName>
            </value>
            <value>
                <fullName>percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>