force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__CurrentBillingReminderSent__c.field-meta.xml
<CustomField>
    <fullName>sfcma__CurrentBillingReminderSent__c</fullName>
    <formula>IF( ISBLANK(sfcma__LastBillingReminder__c), false,
/* In short - have we already sent a reminder this period (which could be monthly or annually */
sfcma__LastBillingReminder__c &gt;= sfcma__CurrentPeriodBeginsAt__c &amp;&amp; sfcma__LastBillingReminder__c &lt;= sfcma__CurrentPeriodEndsAt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Period Billing Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>