force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__CurrentPeriodBeginsAt__c.field-meta.xml
<CustomField>
    <fullName>sfcma__CurrentPeriodBeginsAt__c</fullName>
    <label>Current Period Begins At</label>
    <type>DateTime</type>
</CustomField>