force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__Email__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Email__c</fullName>
    <inlineHelpText>This field is controlled by the associated customer record. Do not manually edit.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>