force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>sfcma__ExpirationDate__c</fullName>
    <description>Date the subscription expires</description>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>