force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__Frequency__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Frequency__c</fullName>
    <description>Frequency of the Checkout Subscription&apos;s plan.</description>
    <formula>TEXT(sfcma__SubscriptionPlan__r.sfcma__Frequency__c)</formula>
    <label>Frequency</label>
    <type>Text</type>
</CustomField>