force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__IsChargeVAT__c.field-meta.xml
<CustomField>
    <fullName>sfcma__IsChargeVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether VAT Percentage should be charged.</description>
    <label>Charge VAT?</label>
    <type>Checkbox</type>
</CustomField>