force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__LicenseAccountName__c.field-meta.xml
<CustomField>
    <fullName>sfcma__LicenseAccountName__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>