force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__LicenseType__c.field-meta.xml
<CustomField>
    <fullName>sfcma__LicenseType__c</fullName>
    <description>Indicates whether the license is based on the company or the user.</description>
    <formula>IF(sfcma__License__r.sfLma__Licensed_Seats__c == &apos;-1&apos;, &apos;Company&apos;, &apos;User&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Type</label>
    <type>Text</type>
</CustomField>