force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__ListingId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__ListingId__c</fullName>
    <label>Listing Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>