force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__ListingName__c.field-meta.xml
<CustomField>
    <fullName>sfcma__ListingName__c</fullName>
    <label>Listing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>