force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__NumberOfTimesCouponApplies__c.field-meta.xml
<CustomField>
    <fullName>sfcma__NumberOfTimesCouponApplies__c</fullName>
    <description>If the coupon has limited life span the no of times the coupon applies to the subscription.</description>
    <label>Number of Times Coupon Applies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>