force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__NumberOfUnits__c.field-meta.xml
<CustomField>
    <fullName>sfcma__NumberOfUnits__c</fullName>
    <description>Number of licenses the customer has purchased</description>
    <label>Number Of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>