force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__PackageId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__PackageId__c</fullName>
    <label>Package Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>