force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__PercentDiscountedByCoupon__c.field-meta.xml
<CustomField>
    <fullName>sfcma__PercentDiscountedByCoupon__c</fullName>
    <description>Percent to be discounted from subtotal of the subscription if a discount coupon of type percent comes with the subscription.</description>
    <label>Percent Discounted by Coupon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>