force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__SendLicenseCountChangedNotification__c.field-meta.xml
<CustomField>
    <fullName>sfcma__SendLicenseCountChangedNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendLicenseCountChangedNotification</label>
    <type>Checkbox</type>
</CustomField>