force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__SendSeatsExceededNotification__c.field-meta.xml
<CustomField>
    <fullName>sfcma__SendSeatsExceededNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendSeatsExceededNotification</label>
    <type>Checkbox</type>
</CustomField>