force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__StripeCustomerId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeCustomerId__c</fullName>
    <label>Stripe Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>