force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__StripeSubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeSubscriptionId__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Subscription Id (deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>