force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__StripeSubscriptionIdUnique__c.field-meta.xml
<CustomField>
    <fullName>sfcma__StripeSubscriptionIdUnique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Subscription Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>