force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__Subscriber__c.field-meta.xml
<CustomField>
    <fullName>sfcma__Subscriber__c</fullName>
    <formula>sfcma__License__r.sfLma__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscriber</label>
    <type>Text</type>
</CustomField>