force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__SubscriptionPlan__c.field-meta.xml
<CustomField>
    <fullName>sfcma__SubscriptionPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription Plan</label>
    <referenceTo>sfcma__SubscriptionPlan__c</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>