force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TotalAmount__c</fullName>
    <description>Total amount for the subscription</description>
    <formula>IF(  TEXT(sfcma__CouponDiscountType__c) = &apos;percent&apos;,
     (  sfcma__Charge__c  -  (  sfcma__Charge__c  *  sfcma__PercentDiscountedByCoupon__c  )  )  *  sfcma__NumberOfUnits__c ,
        (sfcma__Charge__c * (IF(sfcma__NumberOfUnits__c=0, 1, sfcma__NumberOfUnits__c) ) - sfcma__AmountDiscountedByCoupon__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>