force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__TrialLengthInDays__c.field-meta.xml
<CustomField>
    <fullName>sfcma__TrialLengthInDays__c</fullName>
    <formula>sfcma__TrialEndsAt__c - sfcma__TrialStartedAt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Length In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>