force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__VATNumber__c.field-meta.xml
<CustomField>
    <fullName>sfcma__VATNumber__c</fullName>
    <label>VAT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>