force-app/main/default/objects/sfcma__Subscription__c/fields/sfcma__VATPercentage__c.field-meta.xml
<CustomField>
    <fullName>sfcma__VATPercentage__c</fullName>
    <label>VAT Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>