force-app/main/default/objects/sfcma__Subscription__c/listViews/sfcma__All.listView-meta.xml
<ListView>
    <fullName>sfcma__All</fullName>
    <columns>NAME</columns>
    <columns>sfcma__Customer__c</columns>
    <columns>sfcma__IsChargeVAT__c</columns>
    <columns>sfcma__ListingId__c</columns>
    <columns>sfcma__VATNumber__c</columns>
    <columns>sfcma__VATPercentage__c</columns>
    <columns>sfcma__ShippingCountry__c</columns>
    <columns>sfcma__BillingCountry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>